--- a/.poggit.yml
+++ b/.poggit.yml
@@ -5,6 +5,10 @@ branches:
 projects:
   MaskAbilities:
     path: ""
+    libs:
+       - src: muqsit/InvMenu/InvMenu
+         version: ^4.6.5
+         branch: "pm5"
     lint:
       phpstan: false
 ...
